--- a/installationAndoid.org
+++ b/installationAndoid.org
@@ -131,7 +131,9 @@ So for example, to show MySQL users’ username, password and host, we’ll modi
     select user, password, host from mysql.user;
  #+END_SRC
 
-The above sql query will present you with a list of users and their respective user name, password and database host. So you can basically play around with the sql query and adjust it accordingly to reflect the information you want to retrieve from the database as it pertains to MySQL and showing all MySQL users. Stop MySQL/MariaDB process
+The above sql query will present you with a list of users and their respective user name, password and database host. So you can basically play around with the sql query and adjust it accordingly to reflect the information you want to retrieve from the database as it pertains to MySQL and showing all MySQL users. 
+
+* Stop MySQL/MariaDB process
   If you want to stop the process, find the ID from whichever process that has the word “mysql” using ps with grep, and then kill them with kill -9 [ID], the -9 is to send a KILL SIGNAL.
 
   #+BEGIN_SRC shell
