--- a/installationAndoid.org
+++ b/installationAndoid.org
@@ -128,10 +128,9 @@ Given that we’re running a SELECT ALL sql query with the select * from mysql.u
 So for example, to show MySQL users’ username, password and host, we’ll modify the sql query to accordingly as such:
 
 #+BEGIN_SRC shell
-    select user, password, host from mysql.user;
+    select user from mysql.user;
  #+END_SRC
 
-The above sql query will present you with a list of users and their respective user name, password and database host. So you can basically play around with the sql query and adjust it accordingly to reflect the information you want to retrieve from the database as it pertains to MySQL and showing all MySQL users. 
 
 * Stop MySQL/MariaDB process
   If you want to stop the process, find the ID from whichever process that has the word “mysql” using ps with grep, and then kill them with kill -9 [ID], the -9 is to send a KILL SIGNAL.
