--- a/installationAndoid.org
+++ b/installationAndoid.org
@@ -112,9 +112,9 @@ https://wiki.termux.com/wiki/Sharing_Data
   Run it _and press Enter_. 
 
 * How to do MySQL “show users"
-When managing a MySQL database, you will often come across the need to view the list of MySQL user accounts in the database. The common assumption is that there’s a mysql show users command in MySQL but unfortunately that’s not the case. So many novice MySQL administrators especially those with experience using other Database Management Systems (DBMS) are left scratching their heads wondering why there isn’t any mysql show users type of command.
 
-Well, although developers of MySQL does not make available a mysql show users command, the good news is that MySQL provides a handy and simple way to do this and it’s pretty straight forward. To begin, you need to make sure you have MySQL server properly installed and running. Then you need to login as an administrative users via the mysql> prompt using either Command prompt or an SSH client such at Putty.
+
+Although developers of MySQL does not make available a mysql show users command, the good news is that MySQL provides a handy and simple way to do this and it’s pretty straight forward. To begin, you need to make sure you have MySQL server properly installed and running. Then you need to login as an administrative users via the mysql> prompt using either Command prompt or an SSH client such at Putty.
 
 Once logged in, run the following command on the mysql> prompt:
 
