--- a/installationAndoid.org
+++ b/installationAndoid.org
@@ -1,10 +1,10 @@
-* Termux
+* Installation de mariadb dans Termux
 ** Installer Termux et termux-api
 
    https://termux.com
 
    #+BEGIN_SRC shell
-pkg install termux-api
+     pkg install termux-api
    #+END_SRC
 ** Partager des fichiers dans Termux
    https://wiki.termux.com/wiki/Sharing_Data
@@ -18,23 +18,54 @@ pkg install termux-api
    - More...
    - Kill process
 
-* Installation de mariadb dans Termux
-  In your Termux application execute:
+** Installation de mariadb dans Termux
+   In your Termux application execute:
 
-  #+BEGIN_SRC shell
-    apt update
-  #+END_SRC
+   #+BEGIN_SRC shell
+     apt update
+   #+END_SRC
 
-  And then:
+   And then:
 
-  #+BEGIN_SRC shell
-    apt upgrade
-    pkg install mariadb
-  #+END_SRC
+   #+BEGIN_SRC shell
+     apt upgrade
+     pkg install mariadb
+   #+END_SRC
 
   
-  The command shown above will also initialize the database with 2 all-privilege accounts.
-  The first one is "root" which is inaccessible and the second one with name of your Termux user (check with command =id -un= or =whoami=).
+   The command shown above will also initialize the database with 2 all-privilege accounts.
+   The first one is "root" which is inaccessible and the second one with name of your Termux user (check with command =id -un= or =whoami=).
+
+
+* Start the MySQL daemon 
+  (this should also be done if we restart the phone).
+
+  To do this, execute:
+
+  #+BEGIN_SRC shell
+    mysqld_safe -u root &
+  #+END_SRC
+
+  What we do is run =mysqld_safe= with the root user; the ampersand =&= is to run it in the background.
+  Run it _and press Enter_. 
+
+
+* Stop MySQL/MariaDB process
+  If you want to stop the process, find the ID from whichever process that has the word “mysql” using ps with grep, and then kill them with kill -9 [ID], the -9 is to send a KILL SIGNAL.
+
+  #+BEGIN_SRC shell
+    ps aux | grep mysql
+  #+END_SRC
+
+  If you take a  look, they are two processes with 15406 and 15488 ids. The third is from grep but we omit it. Remember that it will change in your case because the process id isn’t always the same.
+
+  When you have the IDs kill them:
+  #+BEGIN_SRC shell
+    kill -9 15406
+    kill -9 15488
+  #+END_SRC
+
+  Or restart the phone
 
 
 * Enable access to root account
@@ -58,38 +89,41 @@ pkg install termux-api
 * Login
 ** Login as 'root'
 
-  Verify that you are able to login as 'root' with:
-  #+BEGIN_SRC sql
-    mysql -u root -p
-  #+END_SRC
+   Verify that you are able to login as 'root' with:
+   #+BEGIN_SRC sql
+     mysql -u root -p
+   #+END_SRC
 
 
-  You will need to provide password set in previous step. (hatterer)
+   You will need to provide password set in previous step. (hatterer)
 
-  Il y a trois types d'utilisateur d'un SGBD, trois rôles bien distincts :
-  1. l'administrateur du SGBD (DataBases Administrator -DBA) et donc des Bases de Données. Son rôle est d'installer et gérer le SGBD dans sa globalité. Pour MySQL ou MariaDB, il s'appelle 'root'.
-  2. les créateurs de Bases de Données dans un SGBD existant : création (CREATE TABLE), modification (ALTER TABLE), suppression (DROP TABLE) de tables...
-  3. les utilisateurs de bases de données.
+   Il y a trois types d'utilisateur d'un SGBD, trois rôles bien distincts :
+   1. l'administrateur du SGBD (DataBases Administrator -DBA) et donc des Bases de Données. Son rôle est d'installer et gérer le SGBD dans sa globalité. Pour MySQL ou MariaDB, il s'appelle 'root'.
+   2. les créateurs de Bases de Données dans un SGBD existant : création (CREATE TABLE), modification (ALTER TABLE), suppression (DROP TABLE) de tables...
+   3. les utilisateurs de bases de données.
 
-  Il ne faut pas travailler sur une bases de données en tant qu'administrateur de bases de données, ce n'est pas son rôle.
-  L'administrateur crée une base de données et délègue sa gestion à un autre utilisateur.
-  
-** Commandes de base en ligne de commande
-   - =SHOW DATABASES=
-   Liste les bases de données
-   - =SHOW STATUS=
-   Affiche le statut du serveur
-   - =USE nom_base=
-   Sélectionne la base par défaut
-   - =SHOW TABLES=
-   Affiche les tables de la base courante
-   - =DESCRIBLE table=
-   Affiche la structure de la table
-   - =SELECT * FROM table=
-   Affiche le contenu de la table
-   - =CREATE DATABASE base=
-   Crée une nouvelle base de données
+   Il ne faut pas travailler sur une bases de données en tant qu'administrateur de bases de données, ce n'est pas son rôle.
+   L'administrateur crée une base de données et délègue sa gestion à un autre utilisateur.
 
+
+* Commandes de base en ligne de commande
+  - =SHOW DATABASES=
+  Liste les bases de données
+  - =SHOW STATUS=
+  Affiche le statut du serveur
+  - =USE nom_base=
+  Sélectionne la base par défaut
+  - =SHOW TABLES=
+  Affiche les tables de la base courante
+  - =DESCRIBLE table=
+  Affiche la structure de la table
+  - =SELECT * FROM table=
+  Affiche le contenu de la table
+  - =CREATE DATABASE base=
+  Crée une nouvelle base de données
+
+
+* Initialiser  
 ** Création d'une nouvelle base de données 
    Création d'une nouvelle base de données vierge =bd_gestion_des_notes=
    #+BEGIN_SRC sql
@@ -104,82 +138,50 @@ pkg install termux-api
      root: GRANT ALL PRIVILEGES ON bd_gestion_des_notes.* TO 'user_gestionnaire'@'localhost';
      root: quit
    #+END_SRC		
+** Se connecter en tant que gestionnaire:
+   #+BEGIN_SRC sql
+     mysql -u user_gestionnaire -p
+     use database bd_gestion_des_notes;      
+   #+END_SRC
 
-* Start the MySQL daemon 
-  (this should also be done if we restart the phone).
 
-  To do this, execute:
-
-  #+BEGIN_SRC shell
-    mysqld_safe -u root &
-  #+END_SRC
-
-  What we do is run =mysqld_safe= with the root user; the ampersand =&= is to run it in the background.
-  Run it _and press Enter_. 
 
 * How to do MySQL “show users"
 
 
-  To begin, you need to make sure you have MySQL server properly installed and running. Then you need to login as an administrative users via the mysql> prompt using either Command prompt or an SSH client such at Putty.
+  To begin, you need to make sure you have MySQL server properly installed and running. Then you need to login as an administrative users via the mysql> prompt 
 
   Once logged in, run the following command on the mysql> prompt:
 
   #+BEGIN_SRC shell
-    select * from mysql.user;
+    select host, user from mysql.user;
   #+END_SRC
 
-
-  Given that we’re running a SELECT ALL sql query with the select * from mysql.user; statement, the query returns a large amount of information – both useful and unuseful. So it’s much better and efficient to modify the sql query to reflect as much information as really needed.
-
-  So for example, to show MySQL users’ username we’ll modify the sql query to accordingly as such:
-
-  #+BEGIN_SRC shell
-    select user from mysql.user;
-  #+END_SRC
-
-
-* Stop MySQL/MariaDB process
-  If you want to stop the process, find the ID from whichever process that has the word “mysql” using ps with grep, and then kill them with kill -9 [ID], the -9 is to send a KILL SIGNAL.
-
-  #+BEGIN_SRC shell
-    ps aux | grep mysql
-  #+END_SRC
-
-  If you take a  look, they are two processes with 15406 and 15488 ids. The third is from grep but we omit it. Remember that it will change in your case because the process id isn’t always the same.
-
-  When you have the IDs kill them:
-  #+BEGIN_SRC shell
-    kill -9 15406
-    kill -9 15488
-  #+END_SRC
 
 * sql-mode dans emacs
 ** se connecter au serveur dans emacs
    'M-x sql-mysql'
-   Renseigner:
-   - User: root
-   - Password: hatterer
-   - Database : bd_gestion_des_notes
-   - Server: localhost
+
+   - en root
+     Renseigner:
+     - User: root
+     - Password: hatterer
+     - Database : bd_gestion_des_notes
+     - Server: localhost
+   - en gestionnaire
+     Renseigner:
+     - User: user_gestionnaire
+     - Password: gestionnaire
+     - Database : bd_gestion_des_notes
+     - Server: localhost
+
 
 * How to run sql script
   If you’re at the MySQL command line mysql> you have to declare the SQL file as source.
 
-  If you’re at the MySQL command line mysql> you have to declare the SQL file as source.
-
-
   #+BEGIN_SRC sql
     mysql> source \home\user\Desktop\script_file.sql;
   #+END_SRC
-
-
-* Sources
-
-  https://wiki.termux.com/wiki/MariaDB
-
-  https://parzibyte.me/blog/en/2019/04/16/install-mysql-mariadb-android-termux/
-
-  https://www.dailyrazor.com/blog/mysql-show-users
 
 
 
