--- a/installationOSX.org
+++ b/installationOSX.org
@@ -10,6 +10,10 @@
 
   #+BEGIN_SRC shell
     brew services start mariadb
+  #+END_SRC
+
+  Check if mariadb is started 
+  #+BEGIN_SRC shell
     brew services list
   #+END_SRC
 
@@ -31,9 +35,10 @@
     SET password FOR 'root'@'localhost' = password('YOUR_ROOT_PASSWORD_HERE');
     flush PRIVILEGES;
     quit
-
   #+END_SRC
-  Login as 'root'
+
+* Login
+** Now you can login as 'root'
 
   #+BEGIN_SRC shell
     mysql -u root -p
@@ -41,6 +46,7 @@
 
   You will need to provide password set in previous step. (hatterer)
 
+** Users
   Il y a trois types d'utilisateur d'un SGBD, trois rôles bien distincts :
   1. l'administrateur du SGBD (DataBases Administrator -DBA) et donc des Bases de Données. Son rôle est d'installer et gérer le SGBD dans sa globalité. Pour MySQL ou MariaDB, il s'appelle 'root'.
   2. les créateurs de Bases de Données dans un SGBD existant : création (CREATE TABLE), modification (ALTER TABLE), suppression (DROP TABLE) de tables...
@@ -48,6 +54,7 @@
 
   Il ne faut pas travailler sur une bases de données en tant qu'administrateur de bases de données, ce n'est pas son rôle.
   L'administrateur crée une base de données et délègue sa gestion à un autre utilisateur.
+
 * Commandes de base en ligne de commande
   - =SHOW DATABASES=
   Liste les bases de données
@@ -83,10 +90,10 @@
 ** Se connecter en tant que gestionnaire:
    #+BEGIN_SRC sql
      mysql -u user_gestionnaire -p
-     use database bd_gestion_des_notes;      
+     use bd_gestion_des_notes;      
    #+END_SRC
 
-* How to do MySQL “show users"
+* How to “show users"
 
 
   To begin, you need to make sure you have MySQL server properly installed and running. Then you need to login as an administrative users via the mysql> prompt 
