--- a/installationOSX.org
+++ b/installationOSX.org
@@ -56,20 +56,57 @@
    L'administrateur crée une base de données et délègue sa gestion à un autre utilisateur.
 
 * Commandes de base en ligne de commande
-  - =SHOW DATABASES=
-  Liste les bases de données
-  - =SHOW STATUS=
-    Affiche le statut du serveur
-  - =USE nom_base=
-  Sélectionne la base par défaut
-  - =SHOW TABLES=
-  Affiche les tables de la base courante
-  - =DESCRIBLE table=
-  Affiche la structure de la table
-  - =SELECT * FROM table=
-  Affiche le contenu de la table
-  - =CREATE DATABASE base=
-  Crée une nouvelle base de données
+  - Liste les bases de données (auxquelles l'utilisateur a accès):
+    #+BEGIN_SRC sql
+      SHOW DATABASES;
+    #+END_SRC
+  - Affiche le statut du serveur:
+    #+BEGIN_SRC sql
+      SHOW STATUS;
+    #+END_SRC
+  - Sélectionne la base par défaut:
+    #+BEGIN_SRC sql
+      USE nom_base;
+    #+END_SRC
+  - Affiche les tables de la base courante:
+    #+BEGIN_SRC sql
+      SHOW TABLES;
+    #+END_SRC
+  - Affiche la structure de la table:
+    #+BEGIN_SRC sql
+      DESCRIBLE nom_table;
+    #+END_SRC
+  - Crée une nouvelle table:
+    #+BEGIN_SRC sql
+      CREATE TABLE nom_table (
+      nom_colonne1 int,
+      nom_colonne2 VARCHAR(100)
+      );
+    #+END_SRC
+  - Ajoute une colonne à une table:
+    #+BEGIN_SRC sql
+      ALTER TABLE nom_table ADD nom_colonne type_colonne;
+    #+END_SRC
+  - Efface une colonne:
+    #+BEGIN_SRC sql 
+      ALTER TABLE nom_table DROP COLUMN nom_colonne;
+    #+END_SRC
+  - Efface une table:
+    #+BEGIN_SRC sql
+      DROP nom_table;
+    #+END_SRC
+  - Affiche le contenu de la table:
+    #+BEGIN_SRC sql
+      SELECT * FROM nom_table;
+    #+END_SRC
+  -  Crée une nouvelle base de données:
+    #+BEGIN_SRC sql
+      CREATE DATABASE nom_database;
+    #+END_SRC
+  -  Efface une base de donnée:
+    #+BEGIN_SRC sql
+      DROP DATABASE nom_database;
+    #+END_SRC
 
 * Initialiser
 ** Création d'une nouvelle base de données 
